# plette

./: .editorconfig  .flake8  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  appveyor.yml  pylintrc  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  pypi_upload.yml
docs/: conf.py  files.rst  index.rst  nested.rst  sections.rst  validation.rst
examples/: Pipfile.invalid.editable  Pipfile.invalid.extras-list  Pipfile.invalid.list  Pipfile.invalid.pre-releases  Pipfile.invalid.scripts  Pipfile.invalid.with-categories  Pipfile.ok.call-scripts  Pipfile.ok.extras-list  Pipfile.ok.multiple-sources  Pipfile.ok.pre-releases  Pipfile.ok.with.sys_platform  Pipfile.valid.editable  Pipfile.valid.pipfile-section  Pipfile.valid.with-categories
examples/extras-list/: Pipfile
news/: 1.bugfix.rst  10.feature.rst  2.bugfix.rst  2.feature.rst  26.bugfix.rst  29.bugfix.rst  3.feature.rst  4.feature.rst  5.bugfix.rst  5395.bugfix.rst  8.bugfix.rst
src/plette/: __init__.py  __main__.py  lockfiles.py  models.py  pipfiles.py
src/plette/models/: __init__.py  base.py  hashes.py  packages.py  scripts.py  sections.py  sources.py
tasks/: __init__.py
tests/: test_lockfiles.py  test_models.py  test_models_hash.py  test_models_meta.py  test_models_packages.py  test_models_requires.py  test_models_sourcecollections.py  test_models_sources.py  test_pipfiles.py  test_scripts.py
tests/integration/: test_examples.py  test_pipenv.py
